--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -57,6 +57,14 @@
                   "maximumWarning": "10kB",
                   "maximumError": "12kB"
                 }
+              ],
+              "assets": [
+                "src/assets",
+                {
+                  "glob": ".htaccess",
+                  "input": "config",
+                  "output": "."
+                }
               ]
             },
             "development": {
@@ -68,6 +76,9 @@
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.dev.ts"
                 }
+              ],
+              "assets": [
+                "src/assets"
               ]
             }
           },
