--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,11 @@
     "@angular/platform-browser": "^18.2.4",
     "@angular/platform-browser-dynamic": "^18.2.4",
     "@angular/router": "^18.2.4",
+    "@fullcalendar/angular": "^6.1.15",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "ngx-cookie-service": "^18.0.0",
