--- a/backend/composer.json
+++ b/backend/composer.json
@@ -9,7 +9,8 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "league/csv": "^9.20"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -25,7 +26,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "classmap": [
+            "database/seeders/csv"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
