--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -27,7 +27,9 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.webmanifest",
+              "src/icons"
             ],
             "styles": [
               "src/styles.scss"
@@ -82,13 +84,17 @@
                 }
               ],
               "assets": [
+                "src/favicon.ico",
                 "src/assets",
+                "src/manifest.webmanifest",
+                "src/icons",
                 {
                   "glob": ".htaccess",
                   "input": "config",
                   "output": "."
                 }
-              ]
+              ],
+              "serviceWorker": "ngsw-config.json"
             },
             "development": {
               "optimization": false,
