--- a/frontend/ngsw-config.json
+++ b/frontend/ngsw-config.json
@@ -28,7 +28,7 @@
     },
     {
       "name": "fonts",
-      "installMode": "lazy",
+      "installMode": "prefetch",
       "updateMode": "prefetch",
       "resources": {
         "urls": [
