--- a/frontend/ngsw-config.json
+++ b/frontend/ngsw-config.json
@@ -1,10 +1,15 @@
 {
   "$schema": "./node_modules/@angular/service-worker/config/schema.json",
   "index": "/index.html",
+  "appData": {
+    "version": "1.0.0",
+    "changelog": "PUPT-FLSS Beta PWA Feature"
+  },
   "assetGroups": [
     {
       "name": "app",
       "installMode": "prefetch",
+      "updateMode": "prefetch",
       "resources": {
         "files": [
           "/favicon.ico",
